--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
     "precommit": "lint-staged"
   },
-  "type": "module",
+  "main": "bin/cli.js",
   "bin": {
-    "pack": "bin/cli.mjs"
+    "edge-pack": "bin/cli.js"
   },
   "repository": {
     "type": "git",
@@ -31,7 +31,7 @@
     "url": "https://github.com/EdgeApp/edge-pack/issues"
   },
   "homepage": "https://github.com/EdgeApp/edge-pack#readme",
-  "devDependencies": {
+  "dependencies": {
     "@babel/core": "^7.18.10",
     "@babel/plugin-transform-for-of": "^7.18.8",
     "@sucrase/webpack-loader": "^2.0.0",
@@ -49,20 +49,20 @@
     "https-browserify": "^1.0.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
+    "minimist": "^1.2.6",
     "npm-run-all": "^4.1.5",
     "os-browserify": "^0.3.0",
+    "path": "^0.12.7",
     "path-browserify": "^1.0.1",
     "prettier": "^2.7.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "string_decoder": "^1.3.0",
-    "url": "^0.11.0",
-    "vm-browserify": "^1.1.2",
-    "webpack-cli": "^4.10.0"
-  },
-  "dependencies": {
-    "minimist": "^1.2.6",
     "sucrase": "^3.25.0",
-    "webpack": "^5.74.0"
+    "url": "^0.11.0",
+    "util": "^0.12.4",
+    "vm-browserify": "^1.1.2",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   }
 }
